--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,22 @@
 # quarkus.package.type=fast-jar
 
 quarkus.swagger-ui.always-include=true
-
-# Maximum Java heap to be used during the native image generation
-quarkus.native.native-image-xmx=4g
-
 kogito.generate.rest.decisions=true
 kogito.generate.rest.processes=true
 
+quarkus.kogito-runtime-tools.users=jdoe,admin,user
+quarkus.kogito-runtime-tools.users.admin.groups=admin
+quarkus.kogito-runtime-tools.users.user.groups=user
+quarkus.kogito-runtime-tools.users.jdoe.groups=user,admin,IT,HR
+
 # Mutable Jar configurations
-quarkus.package.type=mutable-jar
-quarkus.live-reload.password=changeit
+# quarkus.package.type=mutable-jar
+# quarkus.live-reload.password=changeit
 
 # OpenShift Extension Configurations
-quarkus.container-image.build=true
-quarkus.kubernetes-client.trust-certs=true
-quarkus.kubernetes.deployment-target=openshift
-quarkus.openshift.route.expose=true
-quarkus.openshift.env.vars.quarkus-launch-devmode=true
+# quarkus.container-image.build=true
+# quarkus.kubernetes-client.trust-certs=true
+# quarkus.kubernetes.deployment-target=openshift
+# quarkus.openshift.route.expose=true
+# quarkus.openshift.env.vars.quarkus-launch-devmode=true
 # quarkus.live-reload.url=
