--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,11 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>2.6.2.Final</quarkus.platform.version>
-    <quarkus-plugin.version>2.6.2.Final</quarkus-plugin.version>
+    <quarkus.platform.version>2.7.0.Final</quarkus.platform.version>
+    <quarkus-plugin.version>2.7.0.Final</quarkus-plugin.version>
+    <kogito.bom.group-id>org.kie.kogito</kogito.bom.group-id>
+    <kogito.bom.artifact-id>kogito-bom</kogito.bom.artifact-id>
+    <kogito.bom.version>1.17.0.Final</kogito.bom.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
   </properties>
   <dependencyManagement>
@@ -31,7 +34,7 @@
       <dependency>
         <groupId>org.kie.kogito</groupId>
         <artifactId>kogito-quarkus-bom</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>${kogito.bom.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -91,9 +94,7 @@
     <dependency>
       <groupId>org.kie.kogito</groupId>
       <artifactId>runtime-tools-quarkus-extension</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
     </dependency>
-
 
     <dependency>
       <groupId>io.quarkus</groupId>
