--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.acme</groupId>
-  <artifactId>code-with-quarkus</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <groupId>org.kie.sandbox</groupId>
+  <artifactId>quarkus-accelerator</artifactId>
+  <version>1.0.0</version>
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <maven.compiler.parameters>true</maven.compiler.parameters>
@@ -15,8 +15,8 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>2.7.0.Final</quarkus.platform.version>
-    <quarkus-plugin.version>2.7.0.Final</quarkus-plugin.version>
+    <quarkus.platform.version>2.15.3.Final</quarkus.platform.version>
+    <quarkus-plugin.version>2.15.3.Final</quarkus-plugin.version>
     <kogito.bom.group-id>org.kie.kogito</kogito.bom.group-id>
     <kogito.bom.artifact-id>kogito-bom</kogito.bom.artifact-id>
     <kogito.bom.version>1.17.0.Final</kogito.bom.version>
